correct overflow css, change background color

--- a/src/components/Projects/projectStyle.css
+++ b/src/components/Projects/projectStyle.css
@@ -3,6 +3,4 @@ body {
     padding: 0;
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
-    background-color: #1E1E1E;
 }
